--- a/StudentRest-HTML-JPA/WebContent/Index.html
+++ b/StudentRest-HTML-JPA/WebContent/Index.html
@@ -12,6 +12,23 @@
 			$('#nav-container').load('nav.html');
 		});
 	</script>
+	<script type="text/javascript">
+	
+	$(document).ready(function() {
+		$.ajax({ 
+		   type: "GET",  
+	       url: "/SchoolRestJPA/rest/studentservice/students",  
+	       dataType: "json",  
+	       success: function(resp){  
+	         // we have the response  
+	         alert("Server said123:\n '" + resp + "'");  
+	       },  
+	       error: function(e){  
+	         alert('Error: ' + e);  
+	       }  
+		});
+	});
+	</script>
 </head>
   <body>
   <div id="nav-container">
@@ -49,7 +66,7 @@
 					</div>
 						<hr>
 					<div class="row">
-						<table class="table table-striped table-hover ">
+						<table id="eventTable" class="table table-striped table-hover ">
 							<thead>
 								<tr>
 									<th>Title</th>
