--- a/StudentRest-HTML-JPA/WebContent/nav.html
+++ b/StudentRest-HTML-JPA/WebContent/nav.html
@@ -27,9 +27,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="ClientList.html">Clients</a></li>
-            <li><a href="UserList.html">Users</a></li>
-            <li><a href="Logout.html">Account</a></li>
+            <li id="clients"><a href="ClientList.html">Clients</a></li>
+            <li id="users"><a href="UserList.html">Users</a></li>
+            <li id="account"><a href="Logout.html">Account</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div>
