--- a/StudentRest-HTML-JPA/WebContent/nav.html
+++ b/StudentRest-HTML-JPA/WebContent/nav.html
@@ -7,8 +7,8 @@
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/Site.css" rel="stylesheet" media="screen">
 	
-	<script src="/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-   
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	
  
 
@@ -27,7 +27,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li id="clients"><a href="ClientList.html">Clients</a></li>
+            <li id="clientsNav"> <a href="ClientList.html">Clients</a></li>
             <li id="users"><a href="UserList.html">Users</a></li>
             <li id="account"><a href="Logout.html">Account</a></li>
           </ul>
