--- a/StudentRest-HTML-JPA/WebContent/EditClient.html
+++ b/StudentRest-HTML-JPA/WebContent/EditClient.html
@@ -7,13 +7,44 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/Site.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   </head>
-  <body>
   <script type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-container').load('nav.html');
+			loadClientFromLocalStorage();
 		});
+		
 	</script>
+  <body>
+  <script>
+  
+  function loadClientFromLocalStorage(){
+	  var id = localStorage.client;
+
+	 	var clientUrl = "/SchoolRestJPA/rest/tabletopservices/clients/" + id;
+
+	 	$.ajax({
+	 		type: 'GET',
+	 		url: clientUrl,  
+	 	    dataType: "json", 
+	         success: function (data) {
+	        	 //alert("success");
+	        	 $("#inputName").val(data.name);
+	         	 $("#inputPhone").val(data.phoneNumber);
+	         	 $("#inputEmail").val(data.email);
+	         },
+	         error: function (jqXHR, exception) {
+	    	    
+	     	    alert("Client Error" + jqXHR.responseText);
+	     	  }  
+	     });
+	  
+	 
+  }
+  </script>
 
     <div class="container">
   	<div id="nav-container">
