--- a/StudentRest-HTML-JPA/WebContent/Index.html
+++ b/StudentRest-HTML-JPA/WebContent/Index.html
@@ -47,7 +47,7 @@
 	       },  
 	       error: function (jqXHR, exception) {
 	    	    
-	    	    alert(jqXHR.responseText);
+	    	    alert("Error" + jqXHR.responseText);
 	    	  }  
 		});
   }
