--- a/StudentRest-HTML-JPA/WebContent/UserList.html
+++ b/StudentRest-HTML-JPA/WebContent/UserList.html
@@ -48,13 +48,13 @@
 			});
 	}
 
-	function editClient(id){
+	function editUser(id){
 		localStorage.user = id;
 		document.location.href = "/StudentRest-HTML-JPA/WebContent/UserEdit.html", true;  
 		
 	}
 
-	function deleteClient(id){
+	function deleteUser(id){
 
 		//call to delete client service
 		var url = "/SchoolRestJPA/rest/tabletopservices/users/" + id;
@@ -89,7 +89,7 @@
         </div>
         <div class="row">
           
-        	<a href="#" class="btn btn-xs btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i>New User</a>
+        	<a href="javascript:editUser(0)" class="btn btn-xs btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i>New User</a>
         </div>
         <div class="row">
         <table class="table table-striped table-hover ">
