Resolving against myself because the git gods hate me.

--- a/StudentRest-HTML-JPA/WebContent/PlaceCards.html
+++ b/StudentRest-HTML-JPA/WebContent/PlaceCards.html
@@ -10,6 +10,7 @@
     <script type="text/javascript">
 		$(document).ready(function() {
 			$('#nav-container').load('nav.html');
+			$('#tables-nav').load('TablesNav.html');
 			loadUsersTable();
 		});
 	</script>
@@ -52,7 +53,9 @@
     <div id="nav-container">
 
   	</div>
-
+	<div id="tables-nav">
+	
+	</div>
     <div class="container">
     <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12">
