--- a/StudentRest-HTML-JPA/WebContent/UserEdit.html
+++ b/StudentRest-HTML-JPA/WebContent/UserEdit.html
@@ -83,7 +83,7 @@
 	              $("#btnSubmit").prop("disabled", false);
 	          }
 	      });
-	  }else{ //new client
+	  }else{ //new user
 		 console.log("WHYYY???");
 		  var url =  "/SchoolRestJPA/rest/tabletopservices/users/";	  
 			$.ajax({
