--- a/StudentRest-HTML-JPA/WebContent/TablesNav.html
+++ b/StudentRest-HTML-JPA/WebContent/TablesNav.html
@@ -16,12 +16,12 @@
     	<div class="btn-group btn-group-justified">
     		<a href="#" class="btn btn-default">Generate Seating</a>
     		<a href="#" class="btn btn-info">Edit Seating Arrangement</a>
-    		<a href="#" class="btn btn-primary">Guest List View</a>
-    		<a href="#" class="btn btn-success">Table View</a>
-    		<a href="#" class="btn btn-warning">Placecards</a>
-    	</div>    	 
+    		<a href="/StudentRest-HTML-JPA/WebContent/GuestListTable.html" class="btn btn-primary">Guest List View</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/PrintTablesList.html" class="btn btn-success">Table View</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/PlaceCards.html" class="btn btn-warning">PlaceCards</a>
+    	</div>
     </div>
     
-    </div>
+</div>
 </body>
 </html>
