fixed some user stuff

--- a/StudentRest-HTML-JPA/WebContent/UserList.html
+++ b/StudentRest-HTML-JPA/WebContent/UserList.html
@@ -34,7 +34,7 @@
 		        	            +"<td>" + user.name + "</td>"
 		        	            +"<td>" + user.userName + "</td>"
 		        	            +"<td>" + user.email + "</td>"
-								+"<td><a href=\"javascript:editClient(" + user.userID + ")\">Edit</a>&nbsp;<a href=\"javascript:deleteClient(" + user.clientID + ")\">Delete</a></td>"
+								+"<td><a href=\"javascript:editUser(" + user.userID + ")\">Edit</a>&nbsp;<a href=\"javascript:deleteUser(" + user.userID + ")\">Delete</a></td>"
 		        	        +"</tr>";
 		        	       
 		        	$('#usersTable').append(tableRow);
