--- a/StudentRest-HTML-JPA/WebContent/nav.html
+++ b/StudentRest-HTML-JPA/WebContent/nav.html
@@ -34,7 +34,8 @@
         </div><!-- /.nav-collapse -->
       </div>
     </nav>
-<div id="messages">
-	
+<div id="successMessages" class="alert alert-success">
+  	
+  
 </div>
 </html>
