--- a/StudentRest-HTML-JPA/WebContent/EditClient.html
+++ b/StudentRest-HTML-JPA/WebContent/EditClient.html
@@ -144,7 +144,7 @@
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
-        <input type="text" class="form-control" id="inputEmail" name="email" placeholder="Phone">
+        <input type="text" class="form-control" id="inputEmail" name="email" placeholder="Email">
       </div>
     </div>
         <div class="form-group pull-right">
