--- a/StudentRest-HTML-JPA/WebContent/nav.html
+++ b/StudentRest-HTML-JPA/WebContent/nav.html
@@ -34,7 +34,7 @@
         </div><!-- /.nav-collapse -->
       </div>
     </nav>
-<div id="successMessages" class="alert alert-success">
+<div id="successMessages" class="">
   	
   
 </div>
