--- a/StudentRest-HTML-JPA/WebContent/UserList.html
+++ b/StudentRest-HTML-JPA/WebContent/UserList.html
@@ -71,7 +71,7 @@
 		       },  
 		       error: function (jqXHR, exception) {
 		    	    console.log(jqXHR.responseText);
-		   			error("Deleting User");
+		   			error("Error Deleting User");
 		    	  }  
 			});
 		
