--- a/StudentRest-HTML-JPA/WebContent/ClientList.html
+++ b/StudentRest-HTML-JPA/WebContent/ClientList.html
@@ -47,7 +47,8 @@ function loadClientsTable(){
 	       },  
 	       error: function (jqXHR, exception) {
 	    	    
-	    	    alert(jqXHR.responseText);
+	    	    alert("Error Loading Clients");
+	    	    console.log(jqXHR.responseText);
 	    	  }  
 		});
 }
