--- a/StudentRest-HTML-JPA/WebContent/ClientList.html
+++ b/StudentRest-HTML-JPA/WebContent/ClientList.html
@@ -61,9 +61,9 @@ function editClient(id){
 
 function deleteClient(id){
 	var txt;
-	var r = confirm("Are you sure you want to delete the user?");
+	var r = confirm("Are you sure you want to delete the Client?");
 	if (r == true) {
-	    txt = "Deleting User!";
+	    txt = "Deleting Client!";
 	//call to delete client service
 	var url = "/SchoolRestJPA/rest/tabletopservices/clients/" + id;
 	$.ajax({ 
