--- a/StudentRest-HTML-JPA/WebContent/nav.html
+++ b/StudentRest-HTML-JPA/WebContent/nav.html
@@ -7,7 +7,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" media="screen">
     <link href="css/Site.css" rel="stylesheet" media="screen">
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!-- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
 	
  
