--- a/StudentRest-HTML-JPA/WebContent/UserEdit.html
+++ b/StudentRest-HTML-JPA/WebContent/UserEdit.html
@@ -31,7 +31,7 @@
 		        	$("#inputUserID").val(id);
 		        	$("#inputName").val(data.name);
 		         	$("#inputUsername").val(data.userName);
-		         	$("#inputRole").val(data.role);
+		         	$("#inputRole").val(data.role).change();
 		         	$("#inputPassword").val(data.password);
 		         	$("#inputVerifyPassword").val(data.password);
 		         	$("#inputEmail").val(data.email);
@@ -160,12 +160,16 @@
         <input type="password" class="form-control" id="inputVerifyPassword" placeholder="Verify Password">
       </div>
     </div>
+   
     <div class="form-group">
-      <label for="inputRole" class="col-lg-2 control-label">Role</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" id="inputRole" name="role" placeholder="Role">
-      </div>
-    </div>
+		<label for="inputRole"  class="col-lg-2 control-label">Role</label>
+										<div class="col-lg-10">
+											<select name="role" class="form-control" id="inputRole" >
+												<option value="user">user</option>
+												<option value="admin">admin</option>
+											</select>
+										</div>
+									</div>
     <div class="form-group">
       <label for="inputEmail" class="col-lg-2 control-label">Email</label>
       <div class="col-lg-10">
