--- a/StudentRest-HTML-JPA/WebContent/EditEvent.html
+++ b/StudentRest-HTML-JPA/WebContent/EditEvent.html
@@ -82,7 +82,7 @@
  		         	$("#inputTableEmptySpots").val(data.maxEmptySeats);
  		         	console.log(data.primaryPlanner.userID);
  		         	console.log(data.primaryPlanner.name);
- 		         	$("#selectPrimaryPlanner").val(String(data.primaryPlanner.userID)).change();
+ 		         	$("#selectPrimaryPlanner").val(data.primaryPlanner.userID);
  		         	$("#inputTableSize").val(data.eventTableSize);
  		         	if(data.client != null){
  		         		$("#selectClientName").val(data.client.clientID);	
@@ -412,10 +412,7 @@ function editGuest(id){
 											class="col-lg-2 control-label">Primary Planner</label>
 										<div class="col-lg-10">
 											<select class="form-control" id="selectPrimaryPlanner" name="primaryPlanner" >
-												<option>Mary Christmas</option>
-												<option>Sally Sassalot</option>
-												<option>Wendy Whiner</option>
-												<option>Patty Positive</option>
+												
 											</select>
 										</div>
 									</div>
@@ -487,18 +484,7 @@ function editGuest(id){
 								</tr>
 							</thead>
 							<tbody id="guestsTable">
-								<tr>
-
-									<td>Bob Barker</td>
-									<td>5th cousin thrice removed</td>
-									 <td><a href="#">Edit</a>&nbsp;<a href="#">Delete</a></td>
-								</tr>
-								<tr>
-
-									<td>Peter Piper</td>
-									<td>Great Great Great Great Great Uncle</td>
-									 <td><a href="#">Edit</a>&nbsp;<a href="#">Delete</a></td>
-								</tr>
+								
 							</tbody>
 						</table>
 					</div>
