--- a/StudentRest-HTML-JPA/WebContent/GuestListTable.html
+++ b/StudentRest-HTML-JPA/WebContent/GuestListTable.html
@@ -25,8 +25,7 @@
 				var guestsUrl = "/SchoolRestJPA/rest/tabletopservices/events/"
 						+ id + "/guests";
 
-				$
-						.ajax({
+				$.ajax({
 							type : "GET",
 							url : guestsUrl,
 							dataType : "json",
