Edit Guest working

--- a/StudentRest-HTML-JPA/WebContent/EditGuest.html
+++ b/StudentRest-HTML-JPA/WebContent/EditGuest.html
@@ -60,7 +60,7 @@
 		  document.location.href = "/StudentRest-HTML-JPA/WebContent/EditEvent.html", true;
 			
 		}); 
-  	$("#editGuestForm").submit(function(e){
+  	$("#guestForm").submit(function(e){
 	  e.preventDefault();
 	  // Get form
       	var data = {};
