--- a/StudentRest-HTML-JPA/WebContent/PlaceCards.html
+++ b/StudentRest-HTML-JPA/WebContent/PlaceCards.html
@@ -4,8 +4,8 @@
     <title>Tabletops</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="css/Site.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" media="all">
+    <link href="css/Site.css" rel="stylesheet" media="all">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript">
 		$(document).ready(function() {
@@ -70,9 +70,8 @@
 	<div id="tables-nav"></div>
     <div class="container">
     	<div class="row">
-    		<div class="col-sm-12 col-md-12 col-lg-12">
-    			<span><h1>Placecards</h1>
-    			<button class="btn btn-info">Print</button></span>
+    		<h1>Placecards</h1>
+    			<button class="btn btn-info" onclick="window.print();">Print</button>
    			 </div>
     	</div>
     	<hr/>
