--- a/StudentRest-HTML-JPA/WebContent/PrintTablesList.html
+++ b/StudentRest-HTML-JPA/WebContent/PrintTablesList.html
@@ -4,8 +4,8 @@
 <title>Tabletops</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap -->
-<link href="css/bootstrap.css" rel="stylesheet" media="screen">
-<link href="css/Site.css" rel="stylesheet" media="screen">
+<link href="css/bootstrap.css" rel="stylesheet" media="all">
+<link href="css/Site.css" rel="stylesheet" media="all">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript">
@@ -101,7 +101,7 @@
 			<div class="container">
 				<div class="row">
 					<h1>Guests</h1>
-					<button class="btn btn-xs btn-default pull-right">Print</button>
+					<button class="btn btn-xs btn-default pull-right" onclick="window.print();">Print</button>
 				</div>
 				<hr />
 				<div class="row" id="guest_tables"></div>
