Created Edit Seating Arrangement html page - view tables work and move button calls a function - still need to bring up table selection popup and work from there

--- a/StudentRest-HTML-JPA/WebContent/TablesNav.html
+++ b/StudentRest-HTML-JPA/WebContent/TablesNav.html
@@ -46,7 +46,7 @@ function generateSeatingArrangement(){
     	
     	<div class="btn-group btn-group-justified">
     		<a href="#" id="generateSeatingArrangement" class="btn btn-default">Generate Seating</a>
-    		<a href="#" class="btn btn-info">Edit Seating Arrangement</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html" class="btn btn-info">Edit Seating Arrangement</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/GuestListTable.html" class="btn btn-primary">Guest List View</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/PrintTablesList.html" class="btn btn-success">Table View</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/PlaceCards.html" class="btn btn-warning">PlaceCards</a>
