Add to black/white list.

--- a/StudentRest-HTML-JPA/WebContent/ClientList.html
+++ b/StudentRest-HTML-JPA/WebContent/ClientList.html
@@ -20,7 +20,9 @@
  
 <body>
 <script type="text/javascript">
-$('#clientsNav').addClass('active');
+$(document).ready(function() {
+	$('#clientsNav').addClass('active');
+}
 </script>
 <script type="text/javascript">
 function loadClientsTable(){
