--- a/StudentRest-HTML-JPA/WebContent/SelectAddGuests.html
+++ b/StudentRest-HTML-JPA/WebContent/SelectAddGuests.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Tabletops</title>
+    <title>Tabletops</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="css/Site.css" rel="stylesheet" media="screen">
+
+<!-- Bootstrap -->
+<link href="css/bootstrap.css" rel="stylesheet" media="screen">
+<link href="css/Site.css" rel="stylesheet" media="screen">
+<link href="css/bootstrap-clockpicker.min.css" rel="stylesheet" >
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<script	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+
+<script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap-clockpicker.min.js"></script>
+<script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 <body>
+<script type="text/javascript">
+$(document).ready(function() {
+	loadGuestsForGuest();
+}
 
+function loadGuestsForGuest(){
+	
+	
+}
+</script>
 <nav class="navbar navbar-inverse navbar-fixed-top">
 <div class="container">
       <div class="container">
