Highlight button of current page

--- a/StudentRest-HTML-JPA/WebContent/GuestListTable.html
+++ b/StudentRest-HTML-JPA/WebContent/GuestListTable.html
@@ -11,6 +11,7 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 		$('#nav-container').load('nav.html');
+		localStorage.tablesNavSelect = "btnGuestListView";
 		$('#tables-nav').load('TablesNav.html');
 		loadUsersTable();
 	});
