--- a/StudentRest-HTML-JPA/WebContent/TablesNav.html
+++ b/StudentRest-HTML-JPA/WebContent/TablesNav.html
@@ -12,11 +12,7 @@
 <body>
 
 <script type="text/javascript">
-	$(document).ready(function() {
-		$("#generateSeatingArrangement").click(function(e){
-			generateSeatingArrangement();
-		})
-	});
+	
 
 function generateSeatingArrangement(){
 	  var id = localStorage.eventId;
@@ -45,13 +41,21 @@ function generateSeatingArrangement(){
     	<div class="col-sm-12 col-md-12 col-lg-12">
     	
     	<div class="btn-group btn-group-justified">
-    		<a href="#" id="generateSeatingArrangement" class="btn btn-default">Generate Seating</a>
+    		<a href="#" id="generateSeatingArrangement" class="btn btn-info">Generate Seating</a>
     		<a href="/StudentRest-HTML-JPA/WebContent/EditSeatingArrangement.html" class="btn btn-info">Edit Seating Arrangement</a>
-    		<a href="/StudentRest-HTML-JPA/WebContent/GuestListTable.html" class="btn btn-primary">Guest List View</a>
-    		<a href="/StudentRest-HTML-JPA/WebContent/PrintTablesList.html" class="btn btn-success">Table View</a>
-    		<a href="/StudentRest-HTML-JPA/WebContent/PlaceCards.html" class="btn btn-warning">PlaceCards</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/GuestListTable.html" id="btnGuestListView" class="btn btn-info">Guest List View</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/PrintTablesList.html" id="btnTableView" class="btn btn-info">Table View</a>
+    		<a href="/StudentRest-HTML-JPA/WebContent/PlaceCards.html" id ="btnPlaceCard" class="btn btn-info">PlaceCards</a>
     	</div>
     </div>
 </div>
+<script type="text/javascript">
+$(document).ready(function() {
+	$('#'+ localStorage.tablesNavSelect).addClass("active");
+	$("#generateSeatingArrangement").click(function(e){
+		generateSeatingArrangement();
+	})
+});
+</script>
 </body>
 </html>
