import css removed

--- a/StudentRest-HTML-JPA/WebContent/EditEvent.html
+++ b/StudentRest-HTML-JPA/WebContent/EditEvent.html
@@ -515,7 +515,7 @@ function loadPlanners(){
 						<a href="javascript:editGuest(0)" id="btnNewGuest" class="btn btn-xs btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i>New Guest</a>
 						<div class="form-inline">
 							<div class="input-group input-group-sm">
-								<input type="text" class="form-control"
+								<input type="text" class=""
 									placeholder="Import from file">
 								<div class="input-group-btn">
 									<label class="btn btn-default btn-sm btn-file"> Browse
