--- a/StudentRest-HTML-JPA/WebContent/UserEdit.html
+++ b/StudentRest-HTML-JPA/WebContent/UserEdit.html
@@ -16,6 +16,29 @@
   </head>
   <body>
   <script type="text/javascript">
+  function getCookie(cname) {
+		console.log("get cookie");
+		var name = cname + "=";
+		var decodedCookie = decodeURIComponent(document.cookie);
+		var ca = decodedCookie.split(';');
+		for (var i = 0; i < ca.length; i++) {
+			var c = ca[i];
+			while (c.charAt(0) == ' ') {
+				c = c.substring(1);
+			}
+			if (c.indexOf(name) == 0) {
+				return c.substring(name.length, c.length);
+			}
+		}
+		return "";
+	}
+
+	function setHeader(xhr) {
+		console.log("set Header");
+		token = getCookie("token");
+		console.log("Token: " + token);
+		xhr.setRequestHeader('Authorization', 'Bearer ' + token);
+	}
   function loadUserFromLocalStorage(){
 	  var id = localStorage.user;
 		if(id > 0){
@@ -24,7 +47,20 @@
 		 	$.ajax({
 		 		type: 'GET',
 		 		url: clientUrl,  
-		 	    dataType: "json", 
+		 	    dataType: "json",
+		 	   statusCode : {
+					401 : function(response) {
+						$('#page-message').html("You must Login first");
+						alert("Please login to access this page");
+			        	document.location.href = "/StudentRest-HTML-JPA/WebContent/Login.html", true;
+					},
+					405 : function(response) {
+						$('#page-message').html(
+								"Access to the page forbiden");
+						alert("Please login to access this page");
+						document.location.href = "/StudentRest-HTML-JPA/WebContent/Login.html", true;
+					}
+				},
 		         success: function (data) {
 		        	 //alert("success");
 		        	 console.log(JSON.stringify(data));
@@ -39,7 +75,8 @@
 		         error: function (jqXHR, exception) {
 		    	    
 		     	    alert("Load User Error" + jqXHR.responseText);
-		     	  }  
+		     	  },
+			       beforeSend : setHeader  
 		     });
 		}
   }
@@ -91,7 +128,8 @@
 	              console.log("ERROR : ", e.responseText);
 	              alert("There was an error saving the user.");
 	              $("#btnSubmit").prop("disabled", false);
-	          }
+	          },
+		       beforeSend : setHeader
 	      });
 	  }else{ //new user
 	
@@ -114,7 +152,8 @@
 	              alert("There was an error saving the user.");
 	              console.log("ERROR : ", e.responseText);
 	              $("#btnSubmit").prop("disabled", false);
-	          }
+	          },
+		       beforeSend : setHeader
 	      });
 	  }
 	  
